--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="icons/favicon.png" />
+    <!-- SweetAlert2 CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- SweetAlert2 JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link
       rel="stylesheet"
@@ -19,6 +26,7 @@
   <body>
     <div class="control-buttons">
       <span class="start-game">New Game</span>
+      <span class="old-player hidden">Old Player</span>
       <span class="leaderboard-button">Leaderboard</span>
       <div class="how-to-play-container">
         <span class="how-to-play-text">How To Play?</span>
